# review-rec-bot

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 001-sample-yelp-dataset.ipynb  002-analyze-sample-data.ipynb  003-collate-metadata-into-review.ipynb  004-retrieval.ipynb  005-finetune-embeddings.ipynb  006-eval-ft-embed-model.ipynb  007-chatbot-ui.ipynb  008-availability-svc.ipynb  009-pipeline-v1.ipynb
src/features/append_reference/: custom_query_engine.py
src/features/auto_retrieval/: prompts.py
src/features/citation/: custom_citation_query_engine.py
src/features/synthesize_recommendation/: custom_tree_summarize.py
src/run/: args.py  cfg.py  orchestrator.py
src/run/eval/: manual_eval_dataset.py  response.py  retrieval.py
src/run/retriever/: auto_retrieval.py  retriever.py
src/run/vector_db/: __init__.py  base.py  chromadb.py  qdrant.py
src/svc/availability/: availability_check.py
src/svc/current_datetime/: current_datetime_check.py
ui/: callback_handler.py  chat.py  chat_v2.py
ui/.chainlit/: config.toml
