[tool.poetry]
name = "reviews-rec-bot"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
