[tool.poetry]
name = "reviews-rec-bot"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.2"
pyarrow = "*"
loguru = "^0.7.2"
llama-index = "^0.10.56"
llama-index-llms-ollama = "^0.1.6"
llama-index-embeddings-huggingface = "^0.2.2"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-vector-stores-chroma = "^0.1.10"
llama-hub = "^0.0.79.post1"
llama-index-llms-together = "^0.1.3"
llama-index-embeddings-together = "^0.1.3"
llama-index-vector-stores-qdrant = "^0.2.13"
llama-index-callbacks-arize-phoenix = "^0.1.6"
llama-index-postprocessor-flag-embedding-reranker = "^0.1.3"
flagembedding = "^1.2.10"
spacy = "^3.7.5"  # Required when using RagDatasetGenerator.from_documents
mlflow = "2.14.1"
boto3 = "^1.34.145"
llama-index-retrievers-bm25 = "^0.2.2"
fastembed = "^0.3.4"  # Qdrant Hybrid indexing
llama-index-finetuning = "^0.1.10"
mistralai = "<1.0.0"  # To prevent conflict `ModuleNotFoundError: No module named 'mistralai.models.jobs'` with llama-index-finetuning 0.1.10
llama-index-agent-openai = "^0.2.9"
gradio = "^4.41.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
